iptables.rules
# Generated by iptables-save v1.4.7 on Tue Mar 11 08:50:49 2014
*filter
:INPUT ACCEPT [1799:138814]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [1022:260469]
:APNIC - [0:0]
:LOGACCEPT - [0:0]
:LOGDROP - [0:0]
:RIPE - [0:0]
-A INPUT -j APNIC 
-A INPUT -j RIPE 
-A APNIC -s 1.0.0.0/8 -m comment --comment "APNIC Block" -j LOGDROP 
-A APNIC -s 14.0.0.0/8 -m comment --comment "APNIC Block" -j LOGDROP 
-A APNIC -s 27.0.0.0/8 -m comment --comment "APNIC Block" -j LOGDROP 
-A APNIC -s 36.0.0.0/8 -m comment --comment "APNIC Block" -j LOGDROP 
-A APNIC -s 39.0.0.0/8 -m comment --comment "APNIC Block" -j LOGDROP 
-A APNIC -s 42.0.0.0/8 -m comment --comment "APNIC Block" -j LOGDROP 
-A APNIC -s 49.0.0.0/8 -m comment --comment "APNIC Block" -j LOGDROP 
-A APNIC -s 58.0.0.0/8 -m comment --comment "APNIC Block" -j LOGDROP 
-A APNIC -s 59.0.0.0/8 -m comment --comment "APNIC Block" -j LOGDROP 
-A APNIC -s 60.0.0.0/8 -m comment --comment "APNIC Block" -j LOGDROP 
-A APNIC -s 61.0.0.0/8 -m comment --comment "APNIC Block" -j LOGDROP 
-A APNIC -s 101.0.0.0/8 -m comment --comment "APNIC Block" -j LOGDROP 
-A APNIC -s 103.0.0.0/8 -m comment --comment "APNIC Block" -j LOGDROP 
-A APNIC -s 106.0.0.0/8 -m comment --comment "APNIC Block" -j LOGDROP 
-A APNIC -s 110.0.0.0/8 -m comment --comment "APNIC Block" -j LOGDROP 
-A APNIC -s 111.0.0.0/8 -m comment --comment "APNIC Block" -j LOGDROP 
-A APNIC -s 112.0.0.0/8 -m comment --comment "APNIC Block" -j LOGDROP 
-A APNIC -s 113.0.0.0/8 -m comment --comment "APNIC Block" -j LOGDROP 
-A APNIC -s 114.0.0.0/8 -m comment --comment "APNIC Block" -j LOGDROP 
-A APNIC -s 115.0.0.0/8 -m comment --comment "APNIC Block" -j LOGDROP 
-A APNIC -s 116.0.0.0/8 -m comment --comment "APNIC Block" -j LOGDROP 
-A APNIC -s 117.0.0.0/8 -m comment --comment "APNIC Block" -j LOGDROP 
-A APNIC -s 118.0.0.0/8 -m comment --comment "APNIC Block" -j LOGDROP 
-A APNIC -s 119.0.0.0/8 -m comment --comment "APNIC Block" -j LOGDROP 
-A APNIC -s 120.0.0.0/8 -m comment --comment "APNIC Block" -j LOGDROP 
-A APNIC -s 121.0.0.0/8 -m comment --comment "APNIC Block" -j LOGDROP 
-A APNIC -s 122.0.0.0/8 -m comment --comment "APNIC Block" -j LOGDROP 
-A APNIC -s 123.0.0.0/8 -m comment --comment "APNIC Block" -j LOGDROP 
-A APNIC -s 124.0.0.0/8 -m comment --comment "APNIC Block" -j LOGDROP 
-A APNIC -s 125.0.0.0/8 -m comment --comment "APNIC Block" -j LOGDROP 
-A APNIC -s 126.0.0.0/8 -m comment --comment "APNIC Block" -j LOGDROP 
-A APNIC -s 169.208.0.0/12 -m comment --comment "APNIC Block" -j LOGDROP 
-A APNIC -s 175.0.0.0/8 -m comment --comment "APNIC Block" -j LOGDROP 
-A APNIC -s 180.0.0.0/8 -m comment --comment "APNIC Block" -j LOGDROP 
-A APNIC -s 182.0.0.0/8 -m comment --comment "APNIC Block" -j LOGDROP 
-A APNIC -s 183.0.0.0/8 -m comment --comment "APNIC Block" -j LOGDROP 
-A APNIC -s 202.0.0.0/8 -m comment --comment "APNIC Block" -j LOGDROP 
-A APNIC -s 203.0.0.0/8 -m comment --comment "APNIC Block" -j LOGDROP 
-A APNIC -s 210.0.0.0/8 -m comment --comment "APNIC Block" -j LOGDROP 
-A APNIC -s 211.0.0.0/8 -m comment --comment "APNIC Block" -j LOGDROP 
-A APNIC -s 218.0.0.0/8 -m comment --comment "APNIC Block" -j LOGDROP 
-A APNIC -s 219.0.0.0/8 -m comment --comment "APNIC Block" -j LOGDROP 
-A APNIC -s 220.0.0.0/8 -m comment --comment "APNIC Block" -j LOGDROP 
-A APNIC -s 221.0.0.0/8 -m comment --comment "APNIC Block" -j LOGDROP 
-A APNIC -s 222.0.0.0/8 -m comment --comment "APNIC Block" -j LOGDROP 
-A APNIC -s 223.0.0.0/8 -m comment --comment "APNIC Block" -j LOGDROP 
-A LOGACCEPT -j LOG --log-prefix "NSEC: PacketAccept: " 
-A LOGACCEPT -j ACCEPT 
-A LOGDROP -p tcp -m tcp --dport 80 -m comment --comment "Rule 10: Allow HTTP" -j LOGACCEPT 
-A LOGDROP -p tcp -m tcp --dport 443 -m comment --comment "Rule 11: Allow HTTPS" -j LOGACCEPT 
-A LOGDROP -j LOG --log-prefix "NSEC: PacketDrop: " 
-A LOGDROP -j DROP 
-A RIPE -s 2.0.0.0/8 -m comment --comment "RIPE Block" -j LOGDROP 
-A RIPE -s 5.0.0.0/8 -m comment --comment "RIPE Block" -j LOGDROP 
-A RIPE -s 31.0.0.0/8 -m comment --comment "RIPE Block" -j LOGDROP 
-A RIPE -s 37.0.0.0/8 -m comment --comment "RIPE Block" -j LOGDROP 
-A RIPE -s 46.0.0.0/8 -m comment --comment "RIPE Block" -j LOGDROP 
-A RIPE -s 62.0.0.0/8 -m comment --comment "RIPE Block" -j LOGDROP 
-A RIPE -s 77.0.0.0/8 -m comment --comment "RIPE Block" -j LOGDROP 
-A RIPE -s 78.0.0.0/7 -m comment --comment "RIPE Block" -j LOGDROP 
-A RIPE -s 80.0.0.0/7 -m comment --comment "RIPE Block" -j LOGDROP 
-A RIPE -s 82.0.0.0/8 -m comment --comment "RIPE Block" -j LOGDROP 
-A RIPE -s 83.0.0.0/8 -m comment --comment "RIPE Block" -j LOGDROP 
-A RIPE -s 84.0.0.0/6 -m comment --comment "RIPE Block" -j LOGDROP 
-A RIPE -s 88.0.0.0/7 -m comment --comment "RIPE Block" -j LOGDROP 
-A RIPE -s 90.0.0.0/8 -m comment --comment "RIPE Block" -j LOGDROP 
-A RIPE -s 91.0.0.0/8 -m comment --comment "RIPE Block" -j LOGDROP 
-A RIPE -s 92.0.0.0/8 -m comment --comment "RIPE Block" -j LOGDROP 
-A RIPE -s 93.0.0.0/8 -m comment --comment "RIPE Block" -j LOGDROP 
-A RIPE -s 94.0.0.0/8 -m comment --comment "RIPE Block" -j LOGDROP 
-A RIPE -s 95.0.0.0/8 -m comment --comment "RIPE Block" -j LOGDROP 
-A RIPE -s 109.0.0.0/8 -m comment --comment "RIPE Block" -j LOGDROP 
-A RIPE -s 176.0.0.0/8 -m comment --comment "RIPE Block" -j LOGDROP 
-A RIPE -s 178.0.0.0/8 -m comment --comment "RIPE Block" -j LOGDROP 
-A RIPE -s 188.0.0.0/8 -m comment --comment "RIPE Block" -j LOGDROP 
-A RIPE -s 193.0.0.0/8 -m comment --comment "RIPE Block" -j LOGDROP 
-A RIPE -s 194.0.0.0/7 -m comment --comment "RIPE Block" -j LOGDROP 
-A RIPE -s 212.0.0.0/7 -m comment --comment "RIPE Block" -j LOGDROP 
-A RIPE -s 217.0.0.0/8 -m comment --comment "RIPE Block" -j LOGDROP 
-A RIPE -s 196.200.0.0/13 -m comment --comment "RIPE Block" -j LOGDROP 
COMMIT
# Completed on Tue Mar 11 08:50:49 2014
